{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 108,
  "lineage": "a84f7a1d-19a9-fbbf-dfd1-6a978511eae0",
  "resources": [
    {
      "module": "module.aks",
      "mode": "data",
      "type": "kubernetes_namespace",
      "name": "wiz_app",
      "provider": "module.aks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "wiz-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/metadata.name": "wiz-app"
                },
                "name": "wiz-app",
                "resource_version": "1429",
                "uid": "b5c0615f-b3ff-4238-ab97-2bd683ffd0ae"
              }
            ],
            "spec": [
              {
                "finalizers": [
                  "kubernetes"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mongodb_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkInterfaces/mongodb-nic",
            "internal_domain_name_suffix": "ktq5vmgw2pee5poendcb5hp20e.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/publicIPAddresses/mongodb-pip",
                "subnet_id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet/subnets/database-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-BD-E7-26",
            "name": "mongodb-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "wiz-exercise-rg",
            "virtual_machine_id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Compute/virtualMachines/mongodb-vm"
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.mongodb.azurerm_public_ip.mongodb_pip",
            "module.network.azurerm_subnet.database_subnet",
            "module.network.azurerm_virtual_network.wiz_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mongodb_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkInterfaces/mongodb-nic|/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkSecurityGroups/mongodb-nsg",
            "network_interface_id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkInterfaces/mongodb-nic",
            "network_security_group_id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkSecurityGroups/mongodb-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.mongodb.azurerm_network_interface.mongodb_nic",
            "module.mongodb.azurerm_network_security_group.mongodb_nsg",
            "module.mongodb.azurerm_public_ip.mongodb_pip",
            "module.network.azurerm_subnet.database_subnet",
            "module.network.azurerm_virtual_network.wiz_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mongodb_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkSecurityGroups/mongodb-nsg",
            "location": "eastus2",
            "name": "mongodb-nsg",
            "resource_group_name": "wiz-exercise-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-anywhere",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.wiz_exercise"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mongodb_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "27017",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkSecurityGroups/mongodb-nsg/securityRules/allow-mongodb",
            "name": "allow-mongodb",
            "network_security_group_name": "mongodb-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "wiz-exercise-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.mongodb.azurerm_network_security_group.mongodb_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mongodb_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/networkSecurityGroups/mongodb-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "mongodb-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "wiz-exercise-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.mongodb.azurerm_network_security_group.mongodb_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mongodb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/publicIPAddresses/mongodb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.57.76.234",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "mongodb-pip",
            "resource_group_name": "wiz-exercise-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet/subnets/database-subnet",
            "name": "database-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "wiz-exercise-rg",
            "virtual_network_name": "wiz-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.network.azurerm_virtual_network.wiz_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "kubernetes_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet/subnets/kubernetes-subnet",
            "name": "kubernetes-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "wiz-exercise-rg",
            "virtual_network_name": "wiz-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise",
            "module.network.azurerm_virtual_network.wiz_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "wiz_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b0fae154-e3d6-4fc8-bdc4-68c41f9dfcd4",
            "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet",
            "location": "eastus2",
            "name": "wiz-vnet",
            "resource_group_name": "wiz-exercise-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet/subnets/database-subnet",
                "name": "database-subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/bedc16a0-d4ca-4f6c-900d-98ff912d9d19/resourceGroups/wiz-exercise-rg/providers/Microsoft.Network/virtualNetworks/wiz-vnet/subnets/kubernetes-subnet",
                "name": "kubernetes-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.wiz_exercise"
          ]
        }
      ]
    }
  ]
}